--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+  <body>
 <canvas class="illo"></canvas>
 <div id="bodyText">
 <h2>
@@ -25,4 +29,5 @@ and the Dow Jones News Fund.
 </div>    
   </div>
 </div>
+</body>
 </html>
