--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 	  <link rel="stylesheet" type="text/css" href="main.css">
+	  <script src="jquery.min.js"></script>
 	</head>
   <body>
 <canvas class="illo"></canvas>
