--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h2>
   design, development and storytelling for creatives
   </h2>
-<p>I design or build books, periodicals, brand materials, websites and marketing for a range of artists, non profits and educational programs including 
+<p>I design and build books, periodicals, brand materials, websites and marketing for a range of artists, non profits and educational programs including 
 Elizabeth Murray, 
 Jack Tworkov,
 Edith Schloss,
