--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Diane Von Furstenberg,
 The Generations Project, 
 The Koch Institute, 
 and the Dow Jones News Fund.
-  <br><br>I am the design director for <a href="www.artistestatestudio.com"><strong>Artist Estate Studio</strong></a> and the designer for <a href="www.phillipsjournalism.org"><strong>The McCandlish Phillips Journalism Institute</strong></a>
+  <br><br>I am the design director for <a href="https://www.artistestatestudio.com"><strong>Artist Estate Studio</strong></a> and the designer for <a href="http://www.phillipsjournalism.org"><strong>The McCandlish Phillips Journalism Institute</strong></a>
   </p>
   <p>let's get coffee <strong><a href="sms:8057040696">phone</><a href="mailto:hello.peterfreeby@gmail.com"> mail</a><a href="twitter.com/peterfreeby"> twitter</a><a href="instagram.com/peterfreeby"> instagram</a></strong> </p>
 </div>
