--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ The Koch Institute,
 and the Dow Jones News Fund.
   <br><br>I am the design director for <a href="https://www.artistestatestudio.com"><strong>Artist Estate Studio</strong></a> and the designer for <a href="http://www.phillipsjournalism.org"><strong>The McCandlish Phillips Journalism Institute</strong></a>
   </p>
-  <p>let's get coffee <strong><a href="sms:8057040696">phone</><a href="mailto:hello.peterfreeby@gmail.com"> mail</a><a href="twitter.com/peterfreeby"> twitter</a><a href="instagram.com/peterfreeby"> instagram</a></strong> </p>
+  <p>let's get coffee <strong><a href="sms:8057040696">phone</><a href="mailto:hello.peterfreeby@gmail.com"> mail</a><a href="https://www.twitter.com/peterfreeby"> twitter</a><a href="https://www.instagram.com/peterfreeby"> instagram</a></strong> </p>
 </div>
 </div>    
   </div>
