--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@ Edith Schloss,
 Janice Biala,
 Joan Witek,
 George McNeil,
+Judy Dolnick,
 Jordan Eagles,
 John Silvis,
 Diane Von Furstenberg, 
 The Generations Project, 
-The Koch Institute, 
+The Koch Institute, The McCandlish Phillips Journalism Institute 
 and the Dow Jones News Fund.
-  <br><br>I am the design director for <a href="https://www.artistestatestudio.com"><strong>Artist Estate Studio</strong></a> and the designer for <a href="http://www.phillipsjournalism.org"><strong>The McCandlish Phillips Journalism Institute</strong></a>
+  <br><br>I am the design director for <a href="https://www.artistestatestudio.com"><strong>Artist Estate Studio</strong></a> and <a href="vettnews.com"><strong>Vett News</strong></a>
   </p>
   <p>let's get coffee <strong><a href="sms:8057040696">phone</><a href="mailto:hello.peterfreeby@gmail.com"> mail</a><a href="https://www.twitter.com/peterfreeby"> twitter</a><a href="https://www.instagram.com/peterfreeby"> instagram</a></strong> </p>
 </div>
