--- a/index.html
+++ b/index.html
@@ -7,23 +7,9 @@
 <canvas class="illo"></canvas>
 <div id="bodyText">
 <h2>
-  design, development and storytelling for creatives
+  product design leader & business strategist
   </h2>
-<p>I design and build books, periodicals, brand materials, websites and marketing for a range of artists, non profits and educational programs including 
-Elizabeth Murray, 
-Jack Tworkov,
-Edith Schloss,
-Janice Biala,
-Joan Witek,
-George McNeil,
-Judy Dolnick,
-Jordan Eagles,
-John Silvis,
-Diane Von Furstenberg, 
-The Generations Project, 
-The Koch Institute, The McCandlish Phillips Journalism Institute 
-and the Dow Jones News Fund.
-  <br><br>I am the design director for <a href="https://www.artistestatestudio.com"><strong>Artist Estate Studio</strong></a> and <a href="https://www.vettnews.com"><strong>Vett News</strong></a>
+<p>Previously design director of fine artist estate management agency, current COO at mobile gaming startup with $800k pre-seed. Work history includes award-winning web and product design, high value relationships management, and successful fundraises for investors and grants.
   </p>
   <p>let's get coffee <strong><a href="sms:8057040696">phone</><a href="mailto:hello.peterfreeby@gmail.com"> mail</a><a href="https://www.twitter.com/peterfreeby"> twitter</a><a href="https://www.instagram.com/peterfreeby"> instagram</a></strong> </p>
 </div>
